fixed grid alignment

--- a/style.css
+++ b/style.css
@@ -10,8 +10,6 @@ h1{
     background-color: aqua;
     width: 1000px;
     height: 1000px;
+    margin: auto;
 }
 
-body{
-    align-items: center;
-}
